--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
         <div class="middle-wrapper">
             <div class="container">
-                <p>Hello World</p>
+                <p>Hallooo....</p>
             </div>
         </div>
         <div class="bottom-wrapper">
